# H3D

./: .gitignore  H3D.cabal  cabal.config  simple.frag  simple.vert
assets/: color.vert  simple.frag  simple.vert
src/: Attributes.hs  Collision.hs  Components.hs  Graphics.hs  Loader.hs  Main.hs  Object.hs  Scene.hs  Shader.hs  Texture.hs  Uniforms.hs  Util.hs  Wavefront.hs  Window.hs
src/Data/Vec/: Applicative.hs  OpenGL.hs
src/Linear/: Applicative.hs  GL.hs
src/Math/: BVH.hs  Mesh.hs  Shapes.hs
src/Object/: Internal.hs
