name:                H3D
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/danielkeller/H3D
license:             MIT
author:              Dan Keller
maintainer:          dbk40@case.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable H3D
  main-is:             Main.hs
  hs-source-dirs:      src, api
  ghc-options:         -O2 -Wall
  -- other-modules:      
  build-depends:       base > 3 && < 5, GLFW-b, OpenGL >= 2.9.1, linear, records,
                       vector, attoparsec, bytestring, GLUtil, netwire, type-functions, kinds
  extra-libraries:     OpenGL32